--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
 
   academia:
     image: phoenix120/academia_mcp:1.11.3
-    command: ["uv", "run", "-m", "academia_mcp", "--transport", "streamable-http", "--host", "0.0.0.0", "--port", "${ACADEMIA_PORT:-5056}"]
+    command: ["python", "-m", "academia_mcp", "--transport", "streamable-http", "--host", "0.0.0.0", "--port", "${ACADEMIA_PORT:-5056}"]
     ports:
       - "${ACADEMIA_PORT:-5056}:${ACADEMIA_PORT:-5056}"
     healthcheck:
@@ -83,7 +83,7 @@ services:
 
   mle_kit:
     image: phoenix120/mle_kit_mcp:1.2.8
-    command: ["uv", "run", "-m", "mle_kit_mcp", "--transport", "streamable-http", "--host", "0.0.0.0", "--port", "${MLE_KIT_PORT:-5057}"]
+    command: ["python", "-m", "mle_kit_mcp", "--transport", "streamable-http", "--host", "0.0.0.0", "--port", "${MLE_KIT_PORT:-5057}"]
     ports:
       - "${MLE_KIT_PORT:-5057}:${MLE_KIT_PORT:-5057}"
     environment:
